2010-08-31  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-pluto.c: add internal option
	'names_are_strings', to specify to pluto that attributes of
	ScopLib are standard (ie, strdup-able) strings and not void*
	pointers.

2010-08-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch adds the option --pluto-rar-cf, which allow using RAR
	dependences only for the bounding function in Pluto.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-pluto.c,
	* driver/src/options.h,
	* driver/src/options.c: Add support for option --pluto-rar-cf.

	* bin/pocc-versionsgenerator: Minor fix.

2010-07-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/tests/gemver/gemver.plutotileparunrollprev.c,
	* tests/tests/gemver/gemver.plutotileparunroll.c,
	* tests/tests/gemver/gemver.plutotile.c,
	* tests/tests/gemver/gemver.plutotilepar.c,
	* tests/tests/gemver/gemver.passthru.c,
	* tests/tests/dgemm/dgemm.passthru.c,
	* tests/tests/dgemm/dgemm.plutotileparunrollprev.c,
	* tests/tests/dgemm/dgemm.plutotileparunroll.c,
	* tests/tests/dgemm/dgemm.plutotile.c,
	* tests/tests/dgemm/dgemm.plutotilepar.c: Update reference file to
	match the new CLooG output (now: extra () around iterator
	expressions).

	* install.sh: Fix typo.

2010-07-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* install.sh,
	* configure.ac,
	* bin/pocc-make,
	* bin/pocc-util.in: Enable installation of pocc to a specific
	prefix.

	* generators/scripts/vloog: Minor fix.

2010-05-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* generators/scripts/plann,
	* generators/scripts/ploog,
	* generators/scripts/vloog: Use standard tests in shell (fixing a
	potential incompatibility with some shell versions)

2010-04-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch adds the option --sink-all-loops, to drive the