@@ -154,6 +154,15 @@ bootstrap: bootstrap.sh
 configure: --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install
 make-depends: cloog
 
+[clastannotation]
+category: generators
+module: clastannotation
+location: https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/clastannotation/trunk
+retrieve-method: svn
+bootstrap: bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools
+make-depends: scoplib cloog candl piplib scoptools clasttools
+
 ## Optimizers
 [letsee]
 category: optimizers
